# DynaLib-Extraction

./: README.md
C++_DLL_extraction/: CMakeLists.txt  main.cpp  readme.md  shared_lib.h
matlab_DLL_extraction/: compile.m  compile.prj
matlab_DLL_extraction/CCodeforCompile/: CMakeLists.txt  buildInfo.mat  compile.c  compile.h  compile_data.c  compile_data.h  compile_emxAPI.c  compile_emxAPI.h  compile_emxutil.c  compile_emxutil.h  compile_initialize.c  compile_initialize.h  compile_terminate.c  compile_terminate.h  compile_types.h  rtwtypes.h
matlab_DLL_extraction/codegen/lib/compile/: codedescriptor.dmr  compile.h  compile_data.c  compile_emxAPI.h  compile_initialize.c  compile_rtw.bat  compile_rtw.mk
matlab_DLL_extraction/codegen/lib/compile/examples/: main.c  main.h
matlab_DLL_extraction/codegen/lib/compile/html/: report.mldatx
matlab_DLL_extraction/codegen/lib/compile/interface/: _coder_compile_api.c  _coder_compile_api.h  _coder_compile_mex.c  _coder_compile_mex.h
matlab_DLL_extraction/compile_pkg/: CMakeLists.txt  buildInfo.mat  compile.c  compile.h  compile_data.c  compile_data.cpp  compile_emxAPI.c  compile_emxAPI.h  compile_emxutil.c  compile_emxutil.h  compile_initialize.c  compile_terminate.c  compile_terminate.h  rtwtypes.h
matlab_DLL_extraction/compile_pkg2/: CMakeLists.txt  buildInfo.mat  compile.cpp  compile_data.h  compile_initialize.cpp  compile_initialize.h  compile_terminate.cpp  compile_types.h
matlab_DLL_extraction/compile_pkg3/: CMakeLists.txt  buildInfo.mat  compile.c  compile_data.h  compile_emxAPI.c  compile_emxutil.c  compile_emxutil.h  compile_initialize.h  compile_terminate.c  compile_terminate.h  compile_types.h  defines.txt  rtw_proj.tmw  rtwtypes.h
